# Python-general

./: 2gethandle.py  @classmethod_staticmethod.py  OOP.py  Strings.py  TTT.py  ac.py  args___kwargs.py  branching1.py  branching2.py  clases1.py  clases2.py  clases3.py  clases4.py  class___instance_variables.py  composicion.py  copy_deepcopy.py  db_connection1.py  diccionario_cards.py  diccionarios.py  diccionarios2.py  diccionarios3.py  diccionarios4.py  dict_comprehension.py  enum1.py  error_handling1.py  error_handling2.py  fibonacci-series.py  for_continue_pass.py  funciones1.py  generadores.py  generadores_y_for_loops.py  generators-zip.py  generators1.py  generators2.py  generators3.py  gethandle.py  global.py  has_palindrome1.py  has_palindrome2.py  herencia2.py  (+45 more)
Hackerrank/: key_value_pairs.py  list_comprehensions.py  second_lowest_grade.py
OOP/: constructor.py  encapsulation.py
algoritmos/: algoritmos_varios.py  find_palindromes_in_string.py  list_comprehensions_easy.py  lists.py  palindrome.py  palyndrome_in_string.py  quicksort1.py  space-time-complexity.py  staircase.py  test.py  test_module.py  tree_transversals.py  triplets.py  varios.py
arrays/: 1.py
asincronía/: 1.py
data_engineering/aws_glue_ejercicio_1/: pyspark_1.py
data_engineering/ejer1/: employees.csv  employees.xlsx  exercise_with_pandas.py  exercise_with_polar.py
data_engineering/ejer2/: transform_to_sql.py
dependency_injection/: main.py  textfile.py  window.py
design patterns/: state_pattern.py
design patterns/strategy/: strategy3.py
diccionarios/: diccionario_cards.py  diccionarios.py  dict_comprehension2.py  diferencia.py  test.py
ea_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ejercicios_clases/: clases1.py  clases2.py  clases3.py  clases4.py  class___instance_variables.py
error_handling/: error_handling1.py  error_handling2.py
for_loops_exercises/: 1.py  2.py  3.py  4.py
functools/: lru_cache.py  reduce.py
generadores/: generadores_y_for_loops.py  generators-zip.py  generators1.py  generators2.py  generators3.py
inheritance/: herencia1.py  herencia2.py  herencia_ejer1.py
itertools/: itertools1.py
linked_lists/: doubly_linked_list_1.py
listas/: list_comprehension1.py  listas-encadenadas1.py  listas.py  listas2.py
pandas/: reports1.py
recursion/: 2.py  3.py  calculate_power_of_a_number.py  factorial_example.py  fibonacci_number_by_position_calculation.py  greatest_common_divisor.py  how_it_works1.py  how_it_works2.py  recursion_vs_iteration.py  sum_of_digits_of_natural_number.py
reports/: jinja2_report_1.py  template1.html
tests_varios/: borrador.py  test.py  test3.py  tests-varios.py
web_scrapping/: main.py  pyproject.toml
(+22 files in other folders)
