[tool.poetry]
name = "ea-api"
version = "0.1.0"
description = ""
authors = ["ricardo.cataldi <ricardo.cataldi@globant.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
dependency-injector = "^4.39.1"
PyYAML = "^6.0"
wheel = "^0.37.1"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
python-multipart = "^0.0.5"
uvicorn = "^0.18.2"
fastapi-mail = "^1.0.9"
python-dotenv = "^0.20.0"
Faker = "^13.15.0"
fastapi-login = "^1.8.2"
deepdiff = "^5.8.1"
pandas = "^1.5.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.27.1"
Sphinx = "^4.5.0"
flake8 = "^4.0.1"
pylint = "^2.13.8"
coverage = "^6.3.2"
black = "^22.3.0"
isort = "^5.10.1"
coverage-badge = "^1.1.0"
wheel = "^0.37.1"
exrex = "^0.10.5"

[tool.pytest]

    source = ["ea-kernell"]
    branch = true
    omit = ['']
    ignore = ['']


[tool.pylint]
    [tool.pylint.run]

    source = ["ea-kernell"]
    branch = true
    omit = ['']

    [tool.pylint.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]

[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["ea-kernell"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]

[tool.black]
# https://github.com/psf/black
line-length = 120
target_version = ['py310']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 120
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
