[tool.poetry]
name = "web_scrapping"
version = "0.1.0"
description = ""
authors = ["Yamil <yamil.muza@globant.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.2"
selenium = "^4.4.3"
pandas = "^1.4.4"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
